* fix missing memory access size text for 128-bit keylocker instructions (would
  have text like "aesdec128kl xmm0, BUG [rcx]" rather than "..., m384b [rcx]".
  instructions are otherwise decoded correctly.)
* fix incorrect register selection for `vpmovm2*` with `rex.b` set (would select
  registers "k8" through "k15", but should be masked down to "k0".."k7".)
* fix incorrect register selection for `vpmov*2m` with `rex.r` set. similar to
  above, except 64-bit only: in 32- and 16-bit modes, this case was and continues
  to be a `bound` instruction. in 64-bit mode, this would disassemble as a
  `vpmov*2m` with nonsense `k8..k15` selected. to real hardware, this bit
  sequence is an invalid instruction, and so it is now invalid to yaxpeax-x86
  as well.

## 1.2.0
* fix incorrect old yaxpeax-arch version selection for ffi crates
* address incorrect behavior of `Prefixes::cs()`
  * this "getter" would in fact set the selected segment to `cs`. it has never
    actually returned a `bool`, like other selector-checking methods on
    `Prefixes`.
* add `Opcode::is_jcc`, `Opcode::is_setcc`, and `Opcode::is_cmovcc` helpers
  * discovered that `jna` and `jnb` are named what they are, instead of
    `jbe`/`jae` like their `setcc` an `cmovcc` counterparts. sorry. these will
    become `jbe` and `jae` in 2.x.
* fix incorrect decode of a0/a1/a2/a3 mov register when rex.b is set
  (rex.b would select register 8, but the register is unconditionally A)
* fix incorrect handling of some variants of gather instructions,
  vpgatherdq, vpgatherqq, vgatherdps, vgatherdpd, vgatherqps, vgatherqpd.
  errors were any of:
  * reporting qword loads when loads are dword-wide
  * reporting dword loads when loads are qword-wide
  * reporting ymm register sizes when sizes are actually xmm
  * reporting xmm register sizes when sizes are actually ymm
  * reporting index register as ymm when it is actually xmm
* extended support for some newer instructions (pconfig, movdir64b) from just